--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- <script src="./arrow.js"></script> -->
     <!-- <script src="./comparisons.js"></script> -->
     <!-- <script src="./function.js"></script> -->
-    <script src="./logical-operator.js"></script>
+
+    <!-- <script src="./logical-operator.js"></script> -->
+    <!-- <script src="./statement.js"></script> -->
+    <script src="./objects.js"></script>
 </body>
 </html>
