--- a/admission_form/index.html
+++ b/admission_form/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="label-input">
                     <label class="label-of-input" for="mobile">Mobile:</label>
-                    <input class="input-field" type="text" id="mobile" name="mobile" placeholder="01867258957" maxlength="11"  >
+                    <input class="input-field" type="number" id="mobile" name="mobile" placeholder="01867258957" maxlength="11"  >
                 </div>
                 
                 <div class="dis-flex">
