--- a/JS_Basic_problem/index.html
+++ b/JS_Basic_problem/index.html
@@ -14,9 +14,10 @@
     <!-- <script src="./logical-operator.js"></script> -->
     <!-- <script src="./statement.js"></script> -->
     <!-- <script src="./objects.js"></script> -->
+    <script src="./replaceNextCharacter.js"></script>
 
 
-    <script>
+    <!-- <script>
         const person = ['jamal', 'kamal', 'nobi','babu','rahim','robin','safi'];
         const numbers = [22,23,11,12];
         person.copyWithin(2)
@@ -81,6 +82,6 @@
         for (let key of iterator) { 
             console.log(key); 
         } 
-        </script>
+    </script> -->
 </body>
 </html>
